# geneakit

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: correlation_clustermap.ipynb  correlation_mds.ipynb  correlation_pca.ipynb  correlation_tsne.ipynb  correlation_umap.ipynb  figure1.ipynb  figure2.ipynb  kinship.ipynb  kinship_clustermap.ipynb  kinship_heatmap.ipynb  kinship_mds.ipynb  kinship_umap.ipynb  meioses_clustermap.ipynb  meioses_umap.ipynb  relationship_clustermap.ipynb  relationship_umap.ipynb
geneakit/: __init__.py  compute.py  create.py  describe.py  extract.py  identify.py  output.py
geneakit/include/: cgeneakit.hpp  compute.hpp  create.hpp  data.hpp  describe.hpp  extract.hpp  identify.hpp  matrix.hpp  pedigree.hpp
geneakit/lib/: cgeneakit.cpp  compute.cpp  create.cpp  describe.cpp  identify.cpp  output.cpp
geneo/: compute.py  create.py  describe.py  extract.py  identify.py  output.py
geneo/include/: cgeneo.hpp  compute.hpp  data.hpp  identify.hpp  individual.hpp  matrix.hpp  output.hpp  pedigree.hpp
geneo/lib/: cgeneo.cpp  compute.cpp  describe.cpp  extract.cpp  identify.cpp
test/: test_custom.py  test_genea140.py  test_geneaJi.py
