[build-system]
requires = [
    "scikit-build-core",
    "nanobind>=2.5.1"
]
build-backend = "scikit_build_core.build"

[project]
name = "geneakit"
version = "0.1.0"
description = "A set of functions for pedigree analysis, based on the functionality of R's GENLIB"
authors = [
    { name = "Gilles-Philippe Morin" }
]
dependencies = ["numpy", "pandas", "scipy"]